# StraightOffice

./: CMakeLists.txt  README.md
apps/: StraightOffice.cpp  StraightOffice.h
include/StraightExcel/: StraightExcelApplication.h  StraightExcelDispatchDriver.h  StraightExcelProgram.h  StraightExcelWorkbook.h  StraightExcelWorkbooks.h
include/StraightOle/: StraightOleClipboard.h  StraightOleDialogBox.h  StraightOleDispatchDriver.h  StraightOleInit.h  StraightOleVariant.h
include/StraightPpt/: StraightPptApplication.h  StraightPptDispatchDriver.h  StraightPptPresentation.h  StraightPptPresentations.h  StraightPptProgram.h
include/StraightWord/: StraightWordApplication.h  StraightWordDispatchDriver.h  StraightWordDocument.h  StraightWordDocuments.h  StraightWordProgram.h
src/StraightExcel/: StraightExcelApplication.cpp  StraightExcelDispatchDriver.cpp  StraightExcelProgram.cpp  StraightExcelWorkbook.cpp  StraightExcelWorkbooks.cpp
src/StraightOle/: StraightOleClipboard.cpp  StraightOleDialogBox.cpp  StraightOleDispatchDriver.cpp  StraightOleInit.cpp  StraightOleVariant.cpp
src/StraightPpt/: StraightPptApplication.cpp  StraightPptDispatchDriver.cpp  StraightPptPresentation.cpp  StraightPptPresentations.cpp  StraightPptProgram.cpp
src/StraightWord/: StraightWordApplication.cpp  StraightWordDispatchDriver.cpp  StraightWordDocument.cpp  StraightWordDocuments.cpp  StraightWordProgram.cpp
tests/: CMakeLists.txt  UnitTestExcelProgram.cpp  UnitTestOleClipboard.cpp  UnitTestOleDialogBox.cpp  UnitTestOleVariant.cpp  UnitTestPptProgram.cpp  UnitTestWordProgram.cpp
